--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "core-js": "^3.8.3",
+    "pretty-ms": "^7.0.1",
     "uuid": "^8.3.2",
     "vue": "^3.2.13",
     "vue3-date-time-picker": "^2.8.2"
@@ -20,7 +21,8 @@
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
     "eslint": "^7.32.0",
-    "eslint-plugin-vue": "^8.0.3"
+    "eslint-plugin-vue": "^8.0.3",
+    "mini-css-extract-plugin": "^2.6.0"
   },
   "eslintConfig": {
     "root": true,
