--- a/package.json
+++ b/package.json
@@ -20,9 +20,10 @@
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
+    "css-loader": "^6.7.1",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
-    "mini-css-extract-plugin": "^2.6.0"
+    "mini-css-extract-plugin": "^1.3.7"
   },
   "eslintConfig": {
     "root": true,
